# sequencer_frontend

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  stb_ds.h
